syntax = "proto3";


option csharp_namespace = "Shared.Grpc.Storage";

service StorageService {

  rpc GenerateLink (GeneratePresignedUrlRequest) returns (GeneratePresignedUrlResponse);
}


message GeneratePresignedUrlRequest {
  string file_id = 1; 
  string file_name = 2;
  int32 expires_in_minutes = 3;
}

message GeneratePresignedUrlResponse {
  string presigned_url = 1;
}